[package]
name = "rust_map_gen"
version = "0.1.0"
edition = "2021"
authors = ["Mark Eliasen <hello@sirmre.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
image = "0.24.5"
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
