[package]
name = "whittaker_map_generator"
version = "0.1.1"
edition = "2021"
authors = ["Mark Eliasen <mark.eliasen@pm.me>"]
description = "A map generator, generates biomed based on the Whittaker Diagram."
license = "MIT OR Apache-2.0"
repository = "https://github.com/MrEliasen/rust-map-generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
image = "0.24.5"
rand = "0.8.5"
rand_seeder = "0.2.3"
rand_pcg = "0.3.1"
